feat: deplyment script change web3 v4 is not working properly bytecode is not deployed. changed to web3 v1

--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@truffle/hdwallet-provider": "^2.1.12",
+    "@truffle/hdwallet-provider": "^2.1.15",
     "dotenv": "^16.3.1",
     "ganache": "^7.9.1",
     "solc": "^0.8.21",
-    "web3": "^4.1.1"
+    "web3": "1.10.2"
   },
   "repository": "https://github.com/vikashruhilgit/ethereum-solodity-app.git",
   "author": "Vikash Ruhil <v_ruhil@yahoo.com>",
